# vaanipath

./: .gitignore  API_EXAMPLES.md  Dockerfile  INSTALLATION.md  INSTALLATION_STATUS.md  INSTALLATION_SUMMARY.md  PYTHON313_NOTES.md  PYTHON_VERSION_REQUIREMENTS.md  QUICKSTART.md  README.md  check_deps.py  check_install_status.py  check_optional_deps.py  docker-compose.yml  glossary.example.json  requirements-optional.txt  requirements.txt  run.py  setup.py
SIH-fresh/: DEPLOYMENT_SUMMARY.md  ML_INTEGRATION_TEST_REPORT.md
SIH-fresh/VaaniPath-Backend/: .gitignore  CLOUDINARY_SETUP.md  CONNECTION_SUCCESS.md  FRONTEND_TEST_GUIDE.md  MIGRATION_COMPLETE.md  ML_INTEGRATION.md  ML_INTEGRATION_GUIDE.md  PUSH_READY.md  QUICK_START.md  R2_SETUP_GUIDE.md  SECURITY.md  SETUP_CHECKLIST.md  SETUP_GUIDE.md  TEAM_GUIDE.md  (+29 more)
app/: __init__.py  main.py
project-1/: .gitignore  README.md
project-1/SIH-fresh/notebook-lm-reference/notebook-lm/: pyproject.toml
project-1/SIH-fresh/notebook-lm-reference/notebook-lm/backend/app/api/routes/: chat.py  podcast.py
project-1/SIH-fresh/notebook-lm-reference/notebook-lm/backend/app/core/: config.py
project-1/SIH-fresh/notebook-lm-reference/notebook-lm/backend/app/services/: pdf_processor.py
project-1/SIH-fresh/notebook-lm-reference/notebook-lm/frontend/: package.json
project-1/SIH-fresh/notebook-lm-reference/notebook-lm/frontend/public/: index.html
project-1/SIH-fresh/notebook-lm-reference/notebook-lm/frontend/src/: App.css
project-1/SIH-fresh/notebook-lm-reference/notebook-lm/frontend/src/components/: PodcastPanel.tsx  RAGPanel.css
(+390 files in other folders)
