[project]
name = "notebook-lm"
version = "0.1.0"
description = "NotebookLM clone with RAG and podcast generation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",
    "python-dotenv>=1.0.0",
    "pymupdf>=1.24.0",
    "sentence-transformers>=3.3.0",
    "faiss-cpu>=1.9.0",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-groq>=0.2.0",
    "numpy>=2.2.6",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "gtts>=2.5.0",
    "pydub>=0.25.1",
]
